[package]
name = "CronTask"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[dependencies]
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
async-broadcast = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.21"
arc-swap = "1.7.1"
hashbrown = "0.15.2"
rand = "0.8"
chrono = "0.4"
chrono-tz = "0.5"
spin_sleep = "1.3.1"
once_cell = "1.19"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
macros = { path = "../macros" }
dbcore = { path = "../dbcore" }