[package]
name = "cron_task"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.8.4"
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.8.0"
thiserror = "1.0.44"
arc-swap = "1.6.0"
hashbrown = "0.14.0"
once_cell = "1.18.0"
dbcore = { path = "../dbcore" }
macros = { path = "../macros" }
sqlx = "0.8.3"
futures = "0.3.30"